kubescript/deployKube/cert-manager/ingress-with-tls-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ssl-frontend-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - myapp-ingress.southeastasia.cloudapp.azure.com
    secretName: frontend-tls
  rules:
  - host: myapp-ingress.southeastasia.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontendazuremysql
          servicePort: 80
