kubescript/deployKube/cert-manager/simple-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-frontend-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontendazuremysql
          servicePort: 80
